--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 html, body {
-    font-family: 'League Spartan', sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     margin: 0;
     padding: 0;
     max-width: 100vw;
     width: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -24,6 +24,11 @@ body {
     align-items: center;
     padding: 50px;
     margin: 0;
+    transition: .3s;
+}
+
+.section:hover {
+    background: white;
 }
 
 .sub-section {
@@ -424,6 +429,20 @@ h3 {
     margin-top: 0px;
 }
 
+.logo-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    text-align: center;
+}
+
+.logo-div h2 {
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+
 .strike-through {
 text-decoration: line-through;
 text-decoration-color: #5271FF;
@@ -475,9 +494,7 @@ header {
 
 .nav-list li:hover {
     text-decoration: underline;
-    text-decoration-color: #5271FF;
     text-decoration-thickness: 3px;
-    color: #5271FF;
 }
 
 .course-container {
@@ -742,7 +759,7 @@ a {
     color: white;
 }
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 1000px) {
     .section {
       display: flex;
       flex-direction: column;
@@ -754,6 +771,18 @@ a {
 
     .content-cards-div-grid, .content-cards-div-grid-3-fr, .content-cards-div-grid-2-fr  {
         grid-template-columns: 1fr ;
+    }
+
+    .content-card {
+        max-width: 400px;
+    }
+
+    h1 {
+        font-size: 2.5rem;
+    }
+
+    h2 {
+        font-size: 1.5rem;
     }
    
 
