--- a/styles.css
+++ b/styles.css
@@ -158,6 +158,7 @@ button:hover {
     display: flex;
     justify-content: center;
     text-align: center;
+    height: 400px;
     background: white;
     box-shadow: 2px 2px 10px 10px rgba(0, 0, 0, 0.051);
     border-radius: 16px;
@@ -411,14 +412,14 @@ a {
 }
 
 h1 {
-    font-size: 60px;
+    font-size: 48px;
     margin-bottom: 0px;
     line-height: 1;
     margin-bottom: 1rem;
 }
 
 h2 {
-    font-size: 30px;
+    font-size: 24px;
     font-weight: 300;
     margin-top: 0px;
     line-height: 1.2;
