--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600&family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 html, body {
     font-family: 'Josefin Sans', sans-serif;
     margin: 0;
@@ -16,6 +15,13 @@ body {
 
 
 }
+
+p {
+    font-family: 'Cormorant Garamond', serif;
+
+}
+
+
 
 .section {
     height: fit-content;
@@ -416,10 +422,12 @@ h1 {
     margin-bottom: 0px;
     line-height: 1;
     margin-bottom: 1rem;
+    color: #AD302C;
 }
 
 h2 {
     font-size: 24px;
+    font-family: 'Cormorant Garamond', serif;
     font-weight: 300;
     margin-top: 0px;
     line-height: 1.2;
